styles/style.css
/* ... */
.vid-metadata--in-section {
    flex: 1 0 auto;
    order: 1;
}

.vid-metadata--in-modal {
    flex: 0 0 auto;
    box-shadow: 1px 0px 0 0px #444, 0px 1px 0 0px #444, -1px 0px 0 0px #444;
}

.vid-metadata__item {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 0 3px;
    text-align: center;
}

.vid-metadata__key, .vid-metadata__text {
    color: #545454;
}

.vid-metadata__key {
    margin-right: 0.25em;
}

.vid-metadata__text {
    margin: 0 0.25em;
}

.vid-metadata__value {
    color: #325c69;
}

.vid-metadata__link {
    text-decoration: underline;
}

.vid-metadata__link--italicize {
    font-style: italic;
}

.vid-metadata__viewer-btn {
    box-sizing: border-box;
    height: 1.75em;
    width: 2.75em;
    margin: 1.5px 0 01.5px 0.8em;
    padding: 0;
    border: none;
    background-image: url(../img/viewerIcon.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-color: #fff0;
}

@media (min-width:900px) {
    .vid-metadata--in-section {
        order: initial;
    }

    .vid-metadata__viewer-btn {
        margin: 0 0 0 0.8em;
    }
}

/* content-img */
.content-img__fullscreen-container:fullscreen {
    display: flex;
    justify-content: center;
    align-items: center;
}

.content-img__fullscreen-container--fs-polyfill {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: #000;
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content-img__img-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    width: 100%;
    max-height: 60vh;
    box-sizing: border-box;
    border: 7px #cccccc solid;
    border-radius: 10px;
    box-shadow: 0px 0px 0 1px #444;
}

.content-img__img-container--open-bottom {
    border-radius: 10px 10px 0px 0px;
    box-shadow: 0px -1px 0 0px #444, 1px 0px 0 0px #444, 0px 1px 0 0px #ccc, -1px 0px 0 0px #444;
}

.content-img__img-container--enlarged {
    max-height: 100vh;
}

.content-img__img-container--fs-polyfill {
    max-height: 100vh;
    margin: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
}

.content-img__img {
    width: 100%;
    min-height: 0;
    object-fit: contain;
    background: #fff;
}

.content-img__btn {
    display: flex;
    position: absolute;
    bottom: 0;
    right: 0;
    background: #ffffff87;
    border: none;
    margin: 0;
    padding: 2%;
    border-radius: 10px 0 0 0;
}

.content-img__btn--hidden {
    display: none;
}

.content-img__btn svg {
    width: 1.25em;
    fill: #15404e;
}

@media (min-width:900px) {
    .content-img__img-container {
        max-height: 50vh;
    }

    .content-img__img-container--enlarged {
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;
        box-shadow: 0px 0px 0 1px #444;
        max-height: none;
    }
}

/* protein-viewer */
.protein-viewer__fullscreen-container--fs-polyfill {
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: #000;
    z-index: 100;
}

.protein-viewer__viewer-container {
    position: relative;
    box-sizing: border-box;
    border: 7px #ccc solid;
    border-radius: 10px;
    box-shadow: 0px 0px 0 1px #444;
}

.protein-viewer__viewer-container--fs-polyfill {
    height: 100%;
    margin: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
}

.protein-viewer--hidden {
    display: none;
}

.protein-viewer__menu {
    position: absolute;
    display: flex;
    flex-direction: column;
    padding: 0.75em;
    background: #ffffffe6;
    border-radius: 0px 0px 10px 0px;
    font-size: 1rem;
    z-index: 2;
}

.protein-viewer__menu-label {
    color: #15404e;
    font-weight: 600;
    margin: 0.5em 0;
}

.protein-viewer__menu-select {
    font-size: 1em;
}

.protein-viewer__atom-label {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    padding: 1em;
    width: fit-content;
    background: #ffffff87;
    border-radius: 10px 10px 0 0;
    font-size: 1em;
    font-weight: 600;
    z-index: 2;
}

.protein-viewer__atom-label--hidden {
    display: none;
}

.protein-viewer__min-btn {
    display: flex;
    position: absolute;
    bottom: 0;
    right: 0;
    background: #ffffff87;
    border: none;
    margin: 0;
    padding: 2%;
    border-radius: 10px 0 0 0;
    z-index: 2;
}

.protein-viewer__min-btn svg {
    width: 1.25em;
    fill: #15404e;
}

@media (min-width:480px) {
    .protein-viewer__menu {
        flex-direction: row;
    }

    .protein-viewer__menu-label {
        margin: 0 0.5em;
    }
}

@media (min-width:900px) {
    .protein-viewer__viewer-container--enlarged {
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 100;
    }   
}

/* fs-tree-confirm */
.fs-tree-confirm--fs-overlay {
    position: fixed;
    left: 0;
    top: 0;
    box-sizing: border-box;
    width: 100vw;
    height: 100vh;
    background: #9c9c9c80;
    z-index: 100;
}

.fs-tree-confirm--hidden {
    display: none;
}

.fs-tree-confirm__modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 82.5%;
    max-height: 90%;
    box-sizing: border-box;
    padding: 1em;
    border: 4px solid #000;
    font-size: 1em;
    font-family: sans-serif;
    color: #000;
    background: #fff;
}

.fs-tree-confirm__prompt {
    font-size: 1.75em;
    margin: 0 0 1em 0;
}

.fs-tree-confirm__btn-container {
    margin-left: auto;
    width: fit-content;
}

.fs-tree-confirm__btn {
    margin: 0 0.5em;
    padding: 0;
    border: none;
    font-size: 1.25em;
    color: #15404e;
    background: none;
}
/* ... */

